--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,4 @@
-root {
+:root {
   --white: #fff;
   --gray-100: #e1e1e6;
   --gray-300: #c4c4cc;
@@ -9,4 +9,24 @@ root {
   --gray-900: #121214;
 
   --green-500: #00875f;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: var(--gray-900);
+  color: var(--gray-300);
+}
+
+body,
+input,
+textarea,
+button {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
 }
