--- a/src/global.css
+++ b/src/global.css
@@ -12,6 +12,11 @@
   --green-500: #00875f;
 }
 
+:focus {
+  outline: transparent;
+  box-shadow: 0px 0px 0px 2px var(--green-300);
+}
+
 * {
   margin: 0;
   padding: 0;
